Changed description of teams in TeamActicity

--- a/app/src/main/res/layout/content_team.xml
+++ b/app/src/main/res/layout/content_team.xml
@@ -31,26 +31,15 @@
         app:layout_constraintTop_toBottomOf="@+id/team_background_image" />
 
     <TextView
-        android:id="@+id/team_country_label"
-        android:layout_width="wrap_content"
+        android:id="@+id/team_description"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/team_country"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/team_name"
-        android:layout_marginLeft="8dp" />
-
-    <TextView
-        android:id="@+id/team_country_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:textColor="@android:color/black"
-        app:layout_constraintStart_toEndOf="@+id/team_country_label"
-        app:layout_constraintTop_toBottomOf="@+id/team_name"
-        android:layout_marginLeft="8dp" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/team_name" />
 </android.support.constraint.ConstraintLayout>
